--- a/.github/workflows/signup-automation.yml
+++ b/.github/workflows/signup-automation.yml
@@ -18,12 +18,45 @@ jobs:
         with:
           token: ${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}
 
+      - name: Verify PAT secret
+        run: |
+          if [ -z "${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}" ]; then
+            echo "❌ PAT_WITH_INVITE_PERMISSIONS secret is empty or not set"
+            exit 1
+          else
+            echo "✅ PAT_WITH_INVITE_PERMISSIONS secret is available"
+            echo "Token length: ${#PAT_TOKEN}"
+          fi
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}
+
+      - name: Test PAT functionality
+        run: |
+          echo "Testing PAT with GitHub API..."
+          response=$(curl -s -H "Authorization: token $PAT_TOKEN" https://api.github.com/user)
+          if echo "$response" | grep -q "login"; then
+            echo "✅ PAT authentication successful"
+            echo "User: $(echo "$response" | jq -r '.login')"
+          else
+            echo "❌ PAT authentication failed"
+            echo "Response: $response"
+            exit 1
+          fi
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}
+
       - name: Extract GitHub ID and process signup
         id: extract-info
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}
           script: |
+            // Debug: Check if token is available
+            console.log('Token available:', !!process.env.GITHUB_TOKEN);
+            console.log('Custom token available:', '${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}' !== '');
+            console.log('Token length:', '${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}'.length);
+            console.log('Token starts with ghp_:', '${{ secrets.PAT_WITH_INVITE_PERMISSIONS }}'.startsWith('ghp_'));
+
             const { owner, repo } = context.repo;
             const issue = context.payload.issue;
 
@@ -50,48 +83,6 @@ jobs:
             } catch (error) {
               console.error('Invalid GitHub username:', githubId);
               core.setFailed(`Invalid GitHub username: ${githubId}`);
-              return;
-            }
-
-            // Check if user is already a collaborator
-            try {
-              const { data: permissionLevel } = await github.rest.repos.getCollaboratorPermissionLevel({
-                owner,
-                repo,
-                username: githubId,
-              });
-              
-              if (permissionLevel.permission === 'admin' || permissionLevel.permission === 'write') {
-                console.log(`${githubId} is already a collaborator with sufficient permissions.`);
-              } else {
-                console.log(`${githubId} needs permission update.`);
-              }
-            } catch (error) {
-              if (error.status !== 404) {
-                console.error(`Error checking collaborator status: ${error.message}`);
-                throw error;
-              }
-              console.log(`${githubId} is not a collaborator.`);
-            }
-
-            // Add user as collaborator with write permission
-            try {
-              console.log(`Adding ${githubId} as a collaborator with write permission...`);
-              const response = await github.rest.repos.addCollaborator({
-                owner,
-                repo,
-                username: githubId,
-                permission: 'push'
-              });
-              
-              if (response.status === 201) {
-                console.log(`Invitation sent to ${githubId} with write permission.`);
-              } else if (response.status === 204) {
-                console.log(`${githubId}'s permissions updated to write.`);
-              }
-            } catch (error) {
-              console.error(`Error adding collaborator: ${error.message}`);
-              core.setFailed(`Error adding collaborator: ${error.message}`);
               return;
             }
 
@@ -135,9 +126,6 @@ jobs:
             exit 0
           fi
 
-          # Get current date
-          CURRENT_DATE=$(date +%Y.%m.%d)
-
           # Create the markdown file with formatted content based on template
           cat > "$FILENAME" << EOF
           ---
@@ -157,8 +145,6 @@ jobs:
           ## Notes
 
           <!-- Content_START -->
-
-          # ${CURRENT_DATE}
 
 
           <!-- Content_END -->
