--- a/.github/workflows/signup-automation.yml
+++ b/.github/workflows/signup-automation.yml
@@ -154,11 +154,10 @@ jobs:
                 issue_number,
                 body: `✅ Signup processed successfully!
 
-                - ✅ @${githubId} has been invited as a collaborator with write permissions
-                - ✅ User file \`${githubId}.md\` has been created
-                - 📧 Please check your email for the collaboration invitation
+                - 👤 GitHub ID: @${githubId}
+                - 📝 Notes file created: \`${notesPath}\`
 
-                Welcome to the project! 🎉`
+                Let's start Intensive Co-learning! 🎉
               });
               console.log(`Comment posted on issue #${issue_number}`);
             } catch (error) {
